--- a/res/layout/scores_preview_layout.xml
+++ b/res/layout/scores_preview_layout.xml
@@ -83,6 +83,19 @@
             android:paddingTop="@dimen/result_linearLayoutTotalScorePadding" >
 
             <TextView
+                android:id="@+id/scorespreview_textViewDateAndTimeVal"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="TextView" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center" >
+
+            <TextView
                 android:id="@+id/result_textViewTotalScoreLbl"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -93,6 +106,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/result_textViewTotalScoreVal" />
+
         </LinearLayout>
 
         <LinearLayout
