--- a/res/layout/scores_preview_layout.xml
+++ b/res/layout/scores_preview_layout.xml
@@ -6,7 +6,8 @@
     <ImageView
         android:id="@+id/scorespreview_imageBackground"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:contentDescription="@string/imageBackground_desc" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -57,7 +58,7 @@
                 android:id="@+id/scorespreview_textViewTimesPlayed"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="(times played)" />
+                android:text="@string/scorespreview_textViewTimesPlayed" />
 
         </LinearLayout>
 
@@ -86,7 +87,7 @@
                 android:id="@+id/scorespreview_textViewDateAndTimeVal"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="TextView" />
+                android:text="@string/scorespreview_textViewDateAndTimeVal" />
 
         </LinearLayout>
 
@@ -120,13 +121,13 @@
                 android:id="@+id/scorespreview_buttonPrevious"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Previous" />
+                android:text="@string/scorespreview_buttonPrevious" />
 
             <Button
                 android:id="@+id/scorespreview_buttonNext"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Next" />
+                android:text="@string/scorespreview_buttonNext" />
 
         </LinearLayout>
     </LinearLayout>
