--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -3,6 +3,9 @@
     
     <!-- Menu -->
     <dimen name="menu_buttonWidth">150dp</dimen>
+    <dimen name="menu_imageViewLogoWidth">270dp</dimen>
+    <dimen name="menu_imageViewLogoHeight">270dp</dimen>
+    <dimen name="menu_textViewWatchTutorialPadding">10dp</dimen>
     
     <!-- Game Mode -->
     <dimen name="gamemode_linearLayoutNameWidth">200dp</dimen>
@@ -37,5 +40,10 @@
     <dimen name="instructions_textViewInstructionsPadding">20dp</dimen>
     <dimen name="instructions_imageViewWidth">200dp</dimen>
     <dimen name="instructions_imageViewHeight">200dp</dimen>
+    
+    <!-- Video -->
+    <dimen name="video_textViewVideoTutorialsPadding">20dp</dimen>
+    <dimen name="video_spinnerPadding">10dp</dimen>
+    <dimen name="video_videoViewPadding">10dp</dimen>
     
 </resources>
