--- a/res/layout/game_layout.xml
+++ b/res/layout/game_layout.xml
@@ -8,145 +8,155 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:contentDescription="@string/imageBackground_desc" />
-    
-	<LinearLayout
-	    android:layout_width="match_parent"
-	    android:layout_height="match_parent"
-	    android:contentDescription="@string/game_imageViewDesc"
-	    android:gravity="center_horizontal"
-	    android:orientation="vertical" >
-	
-	    <LinearLayout
-	        android:layout_width="match_parent"
-	        android:layout_height="wrap_content"
-	        android:gravity="center"
-	        android:paddingTop="@dimen/game_linearLayoutNameTopPadding" >
-	
-	        <TextView
-	            android:id="@+id/game_textViewName"
-	            android:layout_width="wrap_content"
-	            android:layout_height="wrap_content"
-	            android:text="@string/result_textViewNameLbl"
-	            android:textColor="#000000" />
-	
-	        <TextView
-	            android:id="@+id/game_textViewNameVal"
-	            android:layout_width="wrap_content"
-	            android:layout_height="wrap_content"
-	            android:text="@string/result_textViewNameVal"
-	            android:textColor="#000000" />
-	
-	    </LinearLayout>
-	
-	    <LinearLayout
-	        android:layout_width="match_parent"
-	        android:layout_height="wrap_content"
-	        android:gravity="center" >
-	
-	        <TextView
-	            android:id="@+id/game_textViewGameMode"
-	            android:layout_width="wrap_content"
-	            android:layout_height="wrap_content"
-	            android:text="@string/result_textViewGameModeLbl"
-	            android:textColor="#000000" />
-	
-	        <TextView
-	            android:id="@+id/game_textViewGameModeVal"
-	            android:layout_width="wrap_content"
-	            android:layout_height="wrap_content"
-	            android:text="@string/result_textViewGameModeVal"
-	            android:textColor="#000000" />
-	
-	    </LinearLayout>
-	
-	    <LinearLayout
-	        android:layout_width="match_parent"
-	        android:layout_height="fill_parent"
-	        android:gravity="center"
-	        android:orientation="vertical" >
 
-	        <LinearLayout
-	            android:layout_width="match_parent"
-	            android:layout_height="wrap_content"
-	            android:gravity="center"
-	            android:paddingBottom="@dimen/game_linearLayoutTriesLeftBottomTopPadding"
-	            android:paddingTop="@dimen/game_linearLayoutTriesLeftBottomTopPadding" >
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:contentDescription="@string/game_imageViewDesc"
+        android:gravity="center_horizontal"
+        android:orientation="vertical" >
 
-	            <TextView
-	                android:id="@+id/game_textViewTriesLeftLbl"
-	                android:layout_width="wrap_content"
-	                android:layout_height="wrap_content"
-	                android:text="@string/game_textViewTriesLeftLbl"
-	                android:textColor="#000000" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:paddingTop="@dimen/game_linearLayoutNameTopPadding" >
 
-	            <TextView
-	                android:id="@+id/game_textViewTriesLeftVal"
-	                android:layout_width="wrap_content"
-	                android:layout_height="wrap_content"
-	                android:text="@string/game_textViewTriesLeftVal"
-	                android:textColor="#000000" />
+            <TextView
+                android:id="@+id/game_textViewName"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/result_textViewNameLbl"
+                android:textColor="#000000" />
 
-	        </LinearLayout>
+            <TextView
+                android:id="@+id/game_textViewNameVal"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/result_textViewNameVal"
+                android:textColor="#000000" />
+        </LinearLayout>
 
-	        <FrameLayout
-	            android:layout_width="@dimen/game_imageViewWidth"
-	            android:layout_height="@dimen/game_imageViewHeight"
-	            android:background="@drawable/result_background" >
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center" >
 
-	            <ImageView
-	                android:id="@+id/game_imageView"
-	                android:layout_width="fill_parent"
-	                android:layout_height="fill_parent"
-	                android:contentDescription="@string/game_imageViewDesc"
-	                android:padding="@dimen/game_imageViewPadding"
-	                android:scaleType="fitXY" />
+            <TextView
+                android:id="@+id/game_textViewGameMode"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/result_textViewGameModeLbl"
+                android:textColor="#000000" />
 
-	        </FrameLayout>
-	
-	        <LinearLayout
-	            android:layout_width="match_parent"
-	            android:layout_height="wrap_content"
-	            android:gravity="center" >
-	
-	            <TextView
-	                android:id="@+id/game_textViewOption1"
-	                android:layout_width="wrap_content"
-	                android:layout_height="wrap_content"
-	                android:padding="@dimen/game_textViewOptionPadding"
-	                android:text="@string/game_textViewOption1"
-	                android:textColor="#000000" />
-	
-	            <TextView
-	                android:id="@+id/game_textViewOption2"
-	                android:layout_width="wrap_content"
-	                android:layout_height="wrap_content"
-	                android:padding="@dimen/game_textViewOptionPadding"
-	                android:text="@string/game_textViewOption2"
-	                android:textColor="#000000" />
-	
-	        </LinearLayout>
+            <TextView
+                android:id="@+id/game_textViewGameModeVal"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/result_textViewGameModeVal"
+                android:textColor="#000000" />
+        </LinearLayout>
 
-	        <LinearLayout
-	            android:layout_width="match_parent"
-	            android:layout_height="wrap_content"
-	            android:gravity="center"
-	            android:padding="@dimen/game_linearLayoutHintSkipPadding" >
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="fill_parent"
+            android:gravity="center"
+            android:orientation="vertical" >
 
-	            <Button
-	                android:id="@+id/game_buttonRecord"
-	                android:layout_width="wrap_content"
-	                android:layout_height="wrap_content"
-	                android:text="@string/game_buttonRecord" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:paddingBottom="@dimen/game_linearLayoutTriesLeftBottomTopPadding"
+                android:paddingTop="@dimen/game_linearLayoutTriesLeftBottomTopPadding" >
 
-	            <Button
-	                android:id="@+id/game_buttonSkip"
-	                android:layout_width="wrap_content"
-	                android:layout_height="wrap_content"
-	                android:text="@string/game_buttonSkip" />
-	        </LinearLayout>
-	
-	    </LinearLayout>
-	
-	</LinearLayout>
-	
+                <TextView
+                    android:id="@+id/game_textViewTriesLeftLbl"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/game_textViewTriesLeftLbl"
+                    android:textColor="#000000" />
+
+                <TextView
+                    android:id="@+id/game_textViewTriesLeftVal"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/game_textViewTriesLeftVal"
+                    android:textColor="#000000" />
+            </LinearLayout>
+
+            <FrameLayout
+                android:layout_width="@dimen/game_imageViewWidth"
+                android:layout_height="@dimen/game_imageViewHeight"
+                android:background="@drawable/result_background" >
+
+                <ImageView
+                    android:id="@+id/game_imageView"
+                    android:layout_width="fill_parent"
+                    android:layout_height="fill_parent"
+                    android:contentDescription="@string/game_imageViewDesc"
+                    android:padding="@dimen/game_imageViewPadding"
+                    android:scaleType="fitXY" />
+            </FrameLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center" >
+
+                <TextView
+                    android:id="@+id/game_textViewOption1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:padding="@dimen/game_textViewOptionPadding"
+                    android:text="@string/game_textViewOption1"
+                    android:textColor="#000000" />
+
+                <TextView
+                    android:id="@+id/game_textViewOption2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:padding="@dimen/game_textViewOptionPadding"
+                    android:text="@string/game_textViewOption2"
+                    android:textColor="#000000" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:padding="@dimen/game_linearLayoutHintSkipPadding" >
+
+                <Button
+                    android:id="@+id/game_buttonRecord"
+                    android:layout_width="@dimen/global_buttonWidthNormal"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="2dp"
+                    android:background="@drawable/buttonshape"
+                    android:shadowColor="#1CF5FC"
+                    android:shadowDx="0"
+                    android:shadowDy="0"
+                    android:shadowRadius="25"
+                    android:text="@string/game_buttonRecord"
+                    android:textColor="#FFFFFF"
+                    android:textSize="20sp" />
+
+                <Button
+                    android:id="@+id/game_buttonSkip"
+                    android:layout_width="@dimen/global_buttonWidthNormal"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="2dp"
+                    android:background="@drawable/buttonshape"
+                    android:shadowColor="#1CF5FC"
+                    android:shadowDx="0"
+                    android:shadowDy="0"
+                    android:shadowRadius="25"
+                    android:text="@string/game_buttonSkip"
+                    android:textColor="#FFFFFF"
+                    android:textSize="20sp" />
+
+            </LinearLayout>
+        </LinearLayout>
+    </LinearLayout>
+
 </FrameLayout>
